[package]
name = "git_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = {version = "4.4.6", features = ["derive"] }
configparser = "3.0.2"
crypto = "0.5.1"
flate2 = "1.0.27"
glob = "0.3.1"
ordered_hash_map = "0.2.0"
pwd-grp = "0.1.1"
serde = "1.0.188"
sha1 = "0.10.6"
thiserror = "1.0.49"
toml = "0.8.1"
