[package]
name = "rusty_git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
configparser = "3.0.2"
flate2 = "1.0.27"
git2 = "0.18.1"
hex = "0.4.3"
sha1 = "0.10.6"
